Do some light refactoring

--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
     </div>
 </div>
 <div id="canvas__container"></div>
-<script src="ext/canvas2image.js"></script>
-<script src="lib/chip.js"></script>
-<script src="lib/chip-constants.js"></script>
-<script src="lib/game-state-constants.js"></script>
-<script src="lib/menu-screen.js"></script>
-<script src="lib/game-screen.js"></script>
+<script src="dist/index.js"></script>
 </body>
 </html>
